--- a/src/assets/scss/topic.scss
+++ b/src/assets/scss/topic.scss
@@ -39,7 +39,7 @@
         &.top {
             background: #E74C3C;
         }
-        &.ask {
+        &.house {
             background: #3498DB;
         }
         &.good {
@@ -48,7 +48,7 @@
         &.job {
             background: #9B59B6;
         }
-        &.share {
+        &.game {
             background: #1ABC9C;
         }
     }
