--- a/src/assets/scss/user.scss
+++ b/src/assets/scss/user.scss
@@ -43,7 +43,7 @@
     .avertar {
         width: 40px;
         height: 40px;
-        background: url("../images/components/user.png") no-repeat center center;
+        // background: url("../images/components/user.png") no-repeat center center;
         background-size: 40px 40px;
         border-radius: 20px;
         overflow: hidden;
