--- a/src/assets/scss/iconfont/iconfont.css
+++ b/src/assets/scss/iconfont/iconfont.css
@@ -25,3 +25,4 @@
 .icon-zhaopin:before { content: "\e605"; margin-right: 30px;}
 .icon-xiaoxi:before { content: "\e606"; margin-right: 30px;}
 .icon-about:before { content: "\e607"; margin-right: 30px;}
+.icon-logout:before { content: "\e609"; margin-right: 30px;}
